# swagger.yaml
@@ -347,10 +347,6 @@ definitions:
         x-go-package: github.com/babbage88/go-infra/webapi/user_api_handlers
     UpdateUserRoleMappingRequest:
         properties:
-            executionUserId:
-                format: int32
-                type: integer
-                x-go-name: ExecutionUserId
             roleId:
                 format: int32
                 type: integer
